Minor changes made to notes/queries/organization

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
         <!-- Title -->
         <h1>Home</h1>
 
-        <div class='fill-screen'>
-          <img class='make-it-fit' 
-               src='images/blank.webp'>
+        <div class='container'>
+          <a href='#'>
+          <img class='resize_fit_center'
+            src='images/blank.webp' />
+          </a>
         </div>
 
         <!--Footer-->
