Minor changes made to notes/queries/organization

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class='container'>
           <a href='#'>
           <img class='resize_fit_center'
-            src='images/blank.webp' />
+            src='images/blank2.webp' />
           </a>
         </div>
 
