minor layout tweaks

--- a/index.html
+++ b/index.html
@@ -76,13 +76,18 @@
         <!-- Title -->
         <h1>Home</h1>
 
+        <p>Check out my socials and projects via the navbar links above.</p>
+
         <div class='container'>
           <a href='#'>
           <img class='resize_fit_center'
             src='images/blank2.webp' />
           </a>
         </div>
-
+        <br>
+        <br>
+        <br>
+        
         <!--Footer-->
         <p style="font-size: 75%;">
           <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
