--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
   <link rel="stylesheet" href="css/brands.css">
 
   <!-- Navbar -->
-  <link rel="stylesheet" href="css/navbar.css">
-  <script src="./navbar.js"></script>
+  <link rel="stylesheet" href="css/style.sass">
+  <script src="./menuscript.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -43,28 +43,14 @@
 
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <nav class="navbar">
-    <!-- This will display Jourdan Keillor on the upper-left corner -->
-    <div class="brand-title">
-        <a href="#">Jourdan Keillor</a>
-    </div>
 
-    <!-- This is for hamberger menu -->
-    <a href="#" class="toggle-button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </a>
-
-    <!-- This is the link for the different pages -->
-    <div class="navbar-links">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li> 
-            <li><a href="socials.html">Socials</a></li>
-            <li><a href="projects.html">Projects</a></li>
-        </ul>
-    </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li class="active"><a href="about.html">About</a></li>
+      <li><a href="socials.html">Socials</a></li>
+      <li><a href="projects.html">Projects</a></li>
+    </ul>
   </nav>
 
   <!-- Primary Page Layout
