--- a/about.html
+++ b/about.html
@@ -31,7 +31,9 @@
 
   <!-- Navbar -->
   <link rel="stylesheet" href="css/style.sass">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400">
   <script src="./menuscript.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
