navbar2 electric boogaloo

--- a/about.html
+++ b/about.html
@@ -30,10 +30,7 @@
   <link rel="stylesheet" href="css/brands.css">
 
   <!-- Navbar -->
-  <link rel="stylesheet" href="css/style.sass">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400">
-  <script src="./menuscript.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="css/menu.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -45,15 +42,15 @@
 
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li class="active"><a href="about.html">About</a></li>
-      <li><a href="socials.html">Socials</a></li>
-      <li><a href="projects.html">Projects</a></li>
-    </ul>
-  </nav>
+  <div class="container">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Socials</li>
+        <li>Projects</li>
+      </ul>
+    </nav>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
