--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
         <li>Projects</li>
       </ul>
     </nav>
+  </div>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
