--- a/about.html
+++ b/about.html
@@ -45,10 +45,10 @@
   <div class="container">
     <nav>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Socials</li>
-        <li>Projects</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li> 
+        <li><a href="socials.html">Socials</a></li>
+        <li><a href="projects.html">Projects</a></li>
       </ul>
     </nav>
   </div>
