link projects to test page

--- a/projects.html
+++ b/projects.html
@@ -41,31 +41,31 @@
 
 <body>
 
-    <!-- Navbar
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <nav class="navbar">
-      <!-- This will display Jourdan Keillor on the upper-left corner -->
-      <div class="brand-title">
-          <a href="#">Jourdan Keillor</a>
-      </div>
-  
-      <!-- This is for hamberger menu -->
-      <a href="#" class="toggle-button">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-      </a>
-  
-      <!-- This is the link for the different pages -->
-      <div class="navbar-links">
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li> 
-              <li><a href="socials.html">Socials</a></li>
-              <li><a href="projects.html">Projects</a></li>
-          </ul>
-      </div>
-    </nav>
+  <!-- Navbar
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <nav class="navbar">
+    <!-- This will display Jourdan Keillor on the upper-left corner -->
+    <div class="brand-title">
+        <a href="#">Jourdan Keillor</a>
+    </div>
+
+    <!-- This is for hamberger menu -->
+    <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+
+    <!-- This is the link for the different pages -->
+    <div class="navbar-links">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li> 
+            <li><a href="socials.html">Socials</a></li>
+            <li><a href="projects.html">Projects</a></li>
+        </ul>
+    </div>
+  </nav>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -80,7 +80,10 @@
 
         <!-- GABS 2023 Beer List -->
         <a class="button button-gabs" href="https://link.jozk.me/gabs.html" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2023 Beer List</a>
+        <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2023 Beer List</a>
+        <br>
+        <!-- Test Page -->
+        <a class="button button-default" href="testpage.html" target="_blank" rel="noopener">
         <br>
         <br>
         <br>
