--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
         <br>
         <!-- Test Page -->
         <a class="button button-default" href="testpage.html" target="_blank" rel="noopener">
-          alt="Test Page">Test Page</a>
+        <img class="icon" src="images/icons/minion.png" alt="Test Page">Test Page</a>
         <br>
         <br>
         <br>
