--- a/index copy.html
+++ b/index copy.html
@@ -33,6 +33,10 @@
     <link rel="stylesheet" href="css/navbar.css">
     <script src="./navbar.js"></script>
 
+    <!-- Hamburger -->
+    <link rel="stylesheet" href="css/hamburg.css">
+    <script src="./navbar.js"></script>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
@@ -50,11 +54,12 @@
     </div>
 
     <!-- This is for hamberger menu -->
-    <a href="#" class="toggle-button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </a>
+    <label for="check">
+      <input type="checkbox" id="check"/> 
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
 
     <!-- This is the link for the different pages -->
     <div class="navbar-links">
