--- a/testpage.html
+++ b/testpage.html
@@ -30,7 +30,12 @@
   <link rel="stylesheet" href="css/brands.css">
 
   <!-- Navbar -->
-  <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="css/navbar.css">
+  <script src="./navbar.js"></script>
+
+  <!-- Hamburger -->
+  <link rel="stylesheet" href="css/hamburg.css">
+  <script src="./navbar.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -42,16 +47,30 @@
 
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li> 
-        <li><a href="socials.html">Socials</a></li>
-        <li><a href="projects.html">Projects</a></li>
-      </ul>
-    </nav>
-  </div>
+  <nav class="navbar">
+    <!-- This will display Jourdan Keillor on the upper-left corner -->
+    <div class="brand-title">
+        <a href="#">Jourdan Keillor</a>
+    </div>
+
+    <!-- This is for hamberger menu -->
+    <label for="check">
+      <input type="checkbox" id="check"/> 
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+
+    <!-- This is the link for the different pages -->
+    <div class="navbar-links">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li> 
+            <li><a href="socials.html">Socials</a></li>
+            <li><a href="projects.html">Projects</a></li>
+        </ul>
+    </div>
+  </nav>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
