--- a/testpage.html
+++ b/testpage.html
@@ -34,7 +34,7 @@
 
   <!-- Navbar -->
   <link rel="stylesheet" href="css/navbar.css">
-  <script src="./navbar.js"></script>
+  <script src="./testnavbar.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
