--- a/testpage.html
+++ b/testpage.html
@@ -77,21 +77,9 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
 
-        <!-- Your Image Here -->
-        <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel augue euismod, efficitur ipsum nec, vehicula lacus. Aliquam erat volutpat. Curabitur eu ex tortor. Etiam pulvinar vehicula sapien vel tempus. Mauris sollicitudin justo a ultrices facilisis. Sed sit amet tellus quam. Cras rutrum hendrerit sapien id rhoncus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent ultrices nibh nibh, id vulputate arcu varius ut. Sed tempus nisl eget arcu efficitur, id ullamcorper neque vulputate.
 
-        <!-- Title -->
-        <h1>About Me</h1>
-
-        <!-- Short Bio -->
-        <p>I'm a Melbourne-based lab systems administrator 
-          who spends my free time dabbling in a 
-          variety of online and offline projects<sup>1</sup>. 
-          My current fixations include optimization 
-          of automated<sup>2</sup> self-hosted<sup>3</sup> 
-          digital content platforms<sup>4</sup>
-          and analysing the nothing-if-not-consistently-piss-weak 
-          efforts of the Detroit Tigers<sup>5</sup>.
+          Sed condimentum a est vitae efficitur. Morbi sit amet nibh id velit semper vulputate in sit amet felis. Aliquam tincidunt ex at est ultricies, eget vulputate nisl cursus. Nunc id elit velit. Praesent tincidunt ex ipsum. Vivamus mattis tortor at dui gravida, at pulvinar lorem scelerisque. Nulla facilisi. Sed finibus porttitor sapien, sed elementum quam porta ac. Pellentesque non orci vel eros condimentum feugiat eu vel diam. Donec ornare dignissim dui a euismod. Aenean non mollis tortor. Sed non ultrices tellus, vel rhoncus risus. Morbi pretium ac eros pellentesque porttitor. Pellentesque tincidunt nisi et nulla dapibus vehicula. Ut tincidunt euismod nulla ut dapibus.
         </p>
         <br>
         <br>
