Updated page titles and metadata

--- a/socials.html
+++ b/socials.html
@@ -6,7 +6,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Jourdan</title>
+  <title>Jourdan's Socials</title>
   <meta name="description" content="Find me online!">
   <meta name="author" content="Jourdan Keillor">
 
