--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Jourdan</title>
-  <meta name="description" content="Find me online!">
+  <title>About Jourdan</title>
+  <meta name="description" content="Brief bio">
   <meta name="author" content="Jourdan Keillor">
 
   <!-- Mobile Specific Metas
