--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Jourdan</title>
-  <meta name="description" content="Find me online!">
+  <title>Jourdan's Page</title>
+  <meta name="description" content="Landing page">
   <meta name="author" content="Jourdan Keillor">
 
   <!-- Mobile Specific Metas
