--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Jourdan</title>
-  <meta name="description" content="Find me online!">
+  <title>Jourdan's Projects</title>
+  <meta name="description" content="My bits and pieces">
   <meta name="author" content="Jourdan Keillor">
 
   <!-- Mobile Specific Metas
