Minor changes made to notes/queries/organization

--- a/testpage.html
+++ b/testpage.html
@@ -54,7 +54,7 @@
 
     <!-- This is for hamberger menu -->
     <label for="check">
-      <input type="checkbox" id="check"/> 
+      <input type="checkbox" id="check" class="toggle-button"/> 
       <span></span>
       <span></span>
       <span></span>
