--- a/testpage.html
+++ b/testpage.html
@@ -47,9 +47,9 @@
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <nav class="navbar">
-    <!-- This will display Jourdan Keillor on the upper-left corner -->
+    <!-- This will display jozk.me on the upper-left corner -->
     <div class="brand-title">
-        <a href="#">Jourdan Keillor</a>
+        <a href="#">jozk.me</a>
     </div>
 
     <!-- This is for hamberger menu -->
