--- a/testpagecopy.html
+++ b/testpagecopy.html
@@ -31,8 +31,8 @@
   <link rel="stylesheet" href="css/brands.css">
 
   <!-- Navbar -->
-  <link rel="stylesheet" href="css/testnavbar.css">
-  <script src="./testnavbar.js"></script>
+  <link rel="stylesheet" href="css/navbar.css">
+  <script src="./navbar.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
