--- a/testpage.html
+++ b/testpage.html
@@ -14,11 +14,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!-- Hamburger -->
-  <link rel="stylesheet" href="css/hamburg.css">
   
   <link rel="stylesheet" href="css/normalize.css">
 
@@ -34,7 +31,7 @@
 
   <!-- Navbar -->
   <link rel="stylesheet" href="css/navbar.css">
-  <script src="./testnavbar.js"></script>
+  <script src="./navbar.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
