--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <nav class="navbar">
-    <!-- This will display Jourdan Keillor on the upper-left corner -->
+    <!-- This will display jozk.me on the upper-left corner -->
     <div class="brand-title">
-        <a href="#">Jourdan Keillor</a>
+        <a href="#">jozk.me</a>
     </div>
 
     <!-- This is for hamberger menu -->
-    <a href="#" class="toggle-button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </a>
+    <label for="check">
+      <input type="checkbox" id="check" class="toggle-button"/> 
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
 
     <!-- This is the link for the different pages -->
     <div class="navbar-links">
