Hamonise menu on all pages

--- a/about.html
+++ b/about.html
@@ -44,9 +44,10 @@
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <nav class="navbar">
-    <!-- This will display jozk.me on the upper-left corner -->
+    
+    <!-- This will display a link to the index page on the upper-left corner -->
     <div class="brand-title">
-        <a href="#">jozk.me</a>
+        <a href="index.html">jozk.me</a>
     </div>
 
     <!-- This is for hamberger menu -->
