--- a/index.html
+++ b/index.html
@@ -74,25 +74,27 @@
   <div class="container">
     <div class="row">
       <div class="column" style="margin-top: 10%">
-
+        <br>
+        <!-- Your Image Here -->
+        <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
+        <br>
         <!-- Title -->
-        <h1>Home</h1>
+        <h1>Jourdan Keillor</h1>
+        <br>
+        <h1>Scientist (started lab/analytical, now data/systems), mauler of R scripts, MLB tragic, and personal project addict</h1
+        <br>
+      </div>
+    </div>
+  </div>
 
-        <p>Check out my socials and projects via the navbar links above.</p>
-
-        <div class='container'>
-          <a href='#'>
-          <img class='resize_fit_center'
-            src='images/blank2.webp' />
-          </a>
-        </div>
+    <!-- Footer
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="column" style="margin-top: 10%">
         <br>
-        <br>
-        <br>
-        
-        <!--Footer-->
         <p style="font-size: 75%;">
-          <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
+          © 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a>
         </p>
         <br>
       </div>
