--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Title -->
         <h1>Jourdan Keillor</h1>
         <br>
-        <h1>Scientist (started lab/analytical, now data/systems), mauler of R scripts, MLB tragic, and personal project addict</h1
+        <h2>Scientist (started lab/analytical, now data/systems), mauler of R scripts, MLB tragic, and personal project addict</h2>
         <br>
       </div>
     </div>
