--- a/about.html
+++ b/about.html
@@ -102,20 +102,20 @@
         <br>
         <br>
         <br>
-
-        <!--Footer-->
+        </p>
+        <br>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Footer
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="column" style="margin-top: 10%">
+        <br>
         <p style="font-size: 75%;">
-          <sup>1</sup> Mostly online
-          <br>
-          <sup>2</sup> Mostly *arr-suite apps
-          <br>
-          <sup>3</sup> Mostly Docker containers
-          <br>
-          <sup>4</sup> Mostly Plex
-          <br>
-          <sup>5</sup> Mostly piss 
-          <br>
-          <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
+          © 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a>
         </p>
         <br>
       </div>
