--- a/privacy.html
+++ b/privacy.html
@@ -118,18 +118,25 @@
             <p>If you have any questions about this privacy policy, please contact us using the information provided on the Socials page.</p>
             
           <!-- End Section -->
-          <br />
-          <br />
-          
-          <!--Footer-->
-          <p>
-            <a href="index.html">⬅️ Back to main page</a>
-          </p>
           <br>
-          </center>
+          <br>
         </div>
       </div>
     </div>
+  
+  <!-- Footer
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="column" style="margin-top: 10%">
+        <br>
+        <p style="font-size: 75%;">
+          © 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a>
+        </p>
+        <br>
+      </div>
+    </div>
+  </div>
 
     <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
