--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <br>
         <!-- Title -->
         <h1>Jourdan Keillor</h1>
-        <h3>Scientist (started lab/analytical, now data/systems), mauler of R scripts, MLB tragic, and personal project addict</h3>
+        <h3> · Scientist (started lab/analytical, now data/systems)</h3>
+        <h3> · Mauler of R scripts · MLB tragic · Personal project addict</h3>
         <br>
       </div>
     </div>
