--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         <br>
         <!-- Title -->
         <h1>Jourdan Keillor</h1>
-        <h3> · Scientist (started lab/analytical, now data/systems)</h3>
-        <h3> · Mauler of R scripts · MLB tragic · Personal project addict</h3>
+        <p> · Scientist (started lab/analytical, now data/systems)
+        <br> · Self-hoster of services · MLB tragic 
+        <br> · Mauler of R scripts · Personal project addict</p>
         <br>
       </div>
     </div>
