--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <br>
         <!-- Title -->
         <h1>Jourdan Keillor</h1>
-        <p> · Scientist (started lab/analytical, now data/systems)
+        <p> · Scientist (ex-lab/analytical, now data/systems)
         <br> · Self-hoster of services · MLB tragic 
         <br> · Mauler of R scripts · Personal project addict</p>
         <br>
