--- a/projects.html
+++ b/projects.html
@@ -88,8 +88,10 @@
         <a class="button button-default" href="testpage.html" target="_blank" rel="noopener">
         <img class="icon" src="images/icons/minion.jpeg" alt="Test Page">Test Page</a>
         <br>
+        <p>To do:</p>
         <br>
-        <br>
+        <p> · Fix inconsistent navbar sizing</p>
+        <p> · Recipe Scraper -> Markdown -> Static site. Nyum?</p>
         <br>
       </div>
     </div>
