--- a/projects.html
+++ b/projects.html
@@ -88,10 +88,9 @@
         <a class="button button-default" href="testpage.html" target="_blank" rel="noopener">
         <img class="icon" src="images/icons/minion.jpeg" alt="Test Page">Test Page</a>
         <br>
-        <p>To do:</p>
-        <br>
-        <p> · Fix inconsistent navbar sizing</p>
-        <p> · Recipe Scraper -> Markdown -> Static site. Nyum?</p>
+        <p>To do:
+        <br> · Fix inconsistent navbar sizing
+        <br> · Recipe Scraper -> Markdown -> Static site. Nyum?</p>
         <br>
       </div>
     </div>
