--- a/projects.html
+++ b/projects.html
@@ -90,8 +90,12 @@
         <br>
         <br>
         <p>To do:</p>
-        <p> · Fix inconsistent navbar sizing
-        <br> · Recipe Scraper -> Markdown -> Static site. Nyum?</p>
+        <div class="to do List">
+          <ul>
+              <li> · Fix inconsistent navbar sizing</li>
+              <li> · Recipe Scraper -> Markdown -> Static site.<a href="https://github.com/doersino/nyum">Nyum?</a></li> 
+          </ul>
+        </div> 
         <br>
       </div>
     </div>
