--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Title -->
         <h1>Jourdan Keillor</h1>
         <p> · Scientist (ex-lab/analytical, now data/systems)
-        <br> · Self-hoster of services · MLB tragic 
+        <br> · Self-hoster & server-tender · MLB tragic 
         <br> · Mauler of R scripts · Personal project addict</p>
         <br>
       </div>
