--- a/about.html
+++ b/about.html
@@ -102,7 +102,6 @@
         <br>
         <br>
         <br>
-        </p>
         <br>
       </div>
     </div>
@@ -110,17 +109,19 @@
   
   <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="column" style="margin-top: 10%">
-        <br>
-        <p style="font-size: 75%;">
-          © 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a>
-        </p>
-        <br>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="column" style="margin-top: 10%">
+          <br>
+          <p style="font-size: 75%;">
+            © 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a>
+          </p>
+          <br>
+        </div>
       </div>
     </div>
-  </div>
+  </footer>
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
