--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="footer">
     <div class="row">
-      <div class="column" style="margin-top: 10%">
+      <div class="column">
         <p style="font-size: 75%;">© 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a></p>
       </div>
     </div>
