--- a/socials.html
+++ b/socials.html
@@ -126,15 +126,10 @@
   <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="column" style="margin-top: 10%">
-          <br>
-          <p style="font-size: 75%;">
-            © 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a>
-          </p>
-          <br>
-        </div>
+    <div class="row">
+      <div class="column">
+        <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
+          <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
       </div>
     </div>
   </footer>
