--- a/about.html
+++ b/about.html
@@ -100,7 +100,8 @@
   <footer class="footer">
     <div class="row">
       <div class="column">
-        <p style="font-size: 75%;">© 2023 Jourdan Keillor · Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a> · <a href="privacy.html">Privacy</a></p>
+        <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
+          <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
       </div>
     </div>
   </footer>
