--- a/privacy.html
+++ b/privacy.html
@@ -74,7 +74,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container-left">
       <div class="row">
-        <div class="column" style="margin-top: 10%">
+        <div class="column">
 
           <!-- Page Name -->
           <h1>🔒 Privacy Overview</h1>
