--- a/socials.html
+++ b/socials.html
@@ -73,7 +73,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="column" style="margin-top: 10%">
+      <div class="column">
 
         <!-- Title -->
         <h1>Socials</h1>
