--- a/testpage.html
+++ b/testpage.html
@@ -73,7 +73,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="column" style="margin-top: 10%">
+      <div class="column">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel augue euismod, efficitur ipsum nec, vehicula lacus. Aliquam erat volutpat. Curabitur eu ex tortor. Etiam pulvinar vehicula sapien vel tempus. Mauris sollicitudin justo a ultrices facilisis. Sed sit amet tellus quam. Cras rutrum hendrerit sapien id rhoncus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent ultrices nibh nibh, id vulputate arcu varius ut. Sed tempus nisl eget arcu efficitur, id ullamcorper neque vulputate.</p>
       </div>
     </div>
