navbar css tweaks

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="column">
+      <div class="column" style="margin-top: 10%">
         <!-- Your Image Here -->
         <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
         <br>
