--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="column">
+      <div class="column" style="margin-top: 10%">
 
         <!-- Title -->
         <h1>Projects</h1>
