--- a/projects.html
+++ b/projects.html
@@ -90,8 +90,7 @@
         <br>
         <br>
         <p>To do:</p>
-        <p> · Fix inconsistent navbar sizing
-        <br> · Recipe Scraper -> Markdown -> Static site. Nyum?</p>
+        <p> · Recipe Scraper -> Markdown -> Static site. Nyum?</p>
         <br>
       </div>
     </div>
@@ -102,10 +101,8 @@
   <footer class="footer">
     <div class="row">
       <div class="column">
-        <br>
         <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
           <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
-        <br>
       </div>
     </div>
   </footer>
