--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
         <br>
         <br>
         <p>To do:</p>
-        <p> · Recipe Scraper -> Markdown -> Static site. Nyum?</p>
+        <p> · Recipe Scraper/Markdown/Static site. Nyum?</p>
         <br>
       </div>
     </div>
