--- a/projects.html
+++ b/projects.html
@@ -89,8 +89,8 @@
         <img class="icon" src="images/icons/minion.jpeg" alt="Test Page">Test Page</a>
         <br>
         <br>
-        <p>To do:</p>
-        <p> · Recipe Scraper/Markdown/Static site. Nyum?</p>
+        <p>To do:
+        <br> · Recipe Scraper/Markdown/Static site. Nyum?</p>
         <br>
       </div>
     </div>
