--- a/socials.html
+++ b/socials.html
@@ -120,14 +120,14 @@
   
   <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <footer class="footer">
+  <footer style="bottom: 0; width: 100%; height: 50px; color: #D8DEE9; text-align: center; display: flex; flex-direction: column; justify-content: center;">
     <div class="row">
       <div class="column">
         <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
-          <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
+        <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
       </div>
-    </div>
-  </footer>
+      </div>
+    </footer>
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
