--- a/about.html
+++ b/about.html
@@ -99,6 +99,7 @@
   <footer style="bottom: 0; width: 100%; height: 50px; color: #D8DEE9; text-align: center; display: flex; flex-direction: column; justify-content: center;">
     <div class="row">
       <div class="column">
+        <p style="font-size: 75%;">
         <br>
         <br>
         <br>
@@ -113,12 +114,11 @@
         <sup>4</sup> Mostly Plex
         <br>
         <sup>5</sup> Mostly piss 
-        <br>
-        <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
+        <br>© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
         <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
       </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
