--- a/media.html
+++ b/media.html
@@ -76,32 +76,26 @@
       <div class="column" style="margin-top: 10%">
         <!-- Title -->
         <h1>Media</h1>
-        <p> · Music, TV and Movies I'm Loving - May, 2024 </p>
+        <p>Music, TV and Movies I'm Loving - May, 2024 </p>
         <h2>Music</h2>
         <div class="row">
           <div class="column">
             <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'" style="width:100%">
-            <ul>
-              <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-              <li>Hypnotic Brass Ensemble</li>
-              <li>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
           <div class="column">
             <img src="music_image_2.jpg" alt="Music Image 2" style="width:100%">
-            <ul>
-              <li>Song Title 2</li>
-              <li>Artist 2</li>
-              <li>Genre 2</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
           <div class="column">
             <img src="music_image_3.jpg" alt="Music Image 3" style="width:100%">
-            <ul>
-              <li>Song Title 3</li>
-              <li>Artist 3</li>
-              <li>Genre 3</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
         </div>
   
@@ -109,27 +103,21 @@
         <div class="row">
           <div class="column">
             <img src="tv_image_1.jpg" alt="TV Image 1" style="width:100%">
-            <ul>
-              <li>TV Show Title 1</li>
-              <li>Genre 1</li>
-              <li>Rating 1</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
           <div class="column">
             <img src="tv_image_2.jpg" alt="TV Image 2" style="width:100%">
-            <ul>
-              <li>TV Show Title 2</li>
-              <li>Genre 2</li>
-              <li>Rating 2</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
           <div class="column">
             <img src="tv_image_3.jpg" alt="TV Image 3" style="width:100%">
-            <ul>
-              <li>TV Show Title 3</li>
-              <li>Genre 3</li>
-              <li>Rating 3</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
         </div>
         
@@ -137,27 +125,21 @@
         <div class="row">
           <div class="column">
             <img src="movie_image_1.jpg" alt="Movie Image 1" style="width:100%">
-            <ul>
-              <li>Movie Title 1</li>
-              <li>Genre 1</li>
-              <li>Rating 1</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
           <div class="column">
             <img src="movie_image_2.jpg" alt="Movie Image 2" style="width:100%">
-            <ul>
-              <li>Movie Title 2</li>
-              <li>Genre 2</li>
-              <li>Rating 2</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
           <div class="column">
             <img src="movie_image_3.jpg" alt="Movie Image 3" style="width:100%">
-            <ul>
-              <li>Movie Title 3</li>
-              <li>Genre 3</li>
-              <li>Rating 3</li>
-            </ul>
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <h4>Hypnotic Brass Ensemble</h4>
+            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
           </div>
         </div>
         <br>
