--- a/media.html
+++ b/media.html
@@ -33,6 +33,21 @@
     <link rel="stylesheet" href="css/navbar.css">
     <script src="./navbar.js"></script>
 
+    <style>
+        .column {
+          width: calc(100% / 3); /* Set each column to one-third of the container width */
+          float: left; /* Float the columns left to allow them to sit next to each other */
+          box-sizing: border-box; /* Include padding and border in the column's total width */
+          padding: 0 10px; /* Add some horizontal padding to the columns */
+        }
+    
+        /* Ensure images are responsive */
+        img {
+          max-width: 100%; /* Set the maximum width of the image to 100% of its container */
+          height: auto; /* Allow the image height to adjust proportionally */
+        }
+      </style>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
@@ -79,12 +94,12 @@
         <p>Music, TV and Movies I'm Loving - May, 2024 </p>
         <h2>Music</h2>
         <div class="row">
-          <div class="column">
-            <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'" style="width:100%">
-            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-            <h4>Hypnotic Brass Ensemble</h4>
-            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
-          </div>
+            <div class="column">
+                <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'" style="width:100%">
+                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+                <h4>Hypnotic Brass Ensemble</h4>
+                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+              </div>
           <div class="column">
             <img src="music_image_2.jpg" alt="Music Image 2" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
