--- a/media.html
+++ b/media.html
@@ -35,7 +35,7 @@
 
     <style>
         .column {
-          width: calc(100% / 3); /* Set each column to one-third of the container width */
+          width: calc(30% - 20px); /* Set each column to approximately 30% of the container width with 20px padding on each side */
           float: left; /* Float the columns left to allow them to sit next to each other */
           box-sizing: border-box; /* Include padding and border in the column's total width */
           padding: 0 10px; /* Add some horizontal padding to the columns */
@@ -46,7 +46,7 @@
           max-width: 100%; /* Set the maximum width of the image to 100% of its container */
           height: auto; /* Allow the image height to adjust proportionally */
         }
-      </style>
+    </style>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
