--- a/media.html
+++ b/media.html
@@ -48,7 +48,7 @@
     
         /* Ensure images are responsive */
         img {
-          max-width: 100%; /* Set the maximum width of the image to 100% of its container */
+          width: 100%; /* Set the width of the image to 100% of its container */
           height: auto; /* Allow the image height to adjust proportionally */
         }
       </style>
